Web Console Implementation
Added port configuration to pipe execution output
Added web console configuration
Added web console startup message

--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,4 @@
 {
-    "dir": "C:\\XAMPP\\htdocs\\benchmarkSymfony2\\src"
+    "dir": "C:\\xampp7\\htdocs\\smf2.8\\src\\AppBundle",
+    "port": 2323
 }
